--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,33 +1,11 @@
-bcrypt==4.2.1
-blinker==1.9.0
-click==8.1.8
-coverage==7.6.12
-distlib==0.3.9
-filelock==3.16.1
-Flask==3.1.0
-Flask-Bcrypt==1.0.1
-Flask-Cors==5.0.0
-Flask-JWT-Extended==4.7.1
+Flask==3.0.2
 Flask-SQLAlchemy==3.1.1
-iniconfig==2.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.5
-MarkupSafe==3.0.2
-numpy==2.2.3
-packaging==24.2
-pandas==2.2.3
-platformdirs==4.3.6
-pluggy==1.5.0
-psutil==6.1.1
-PyJWT==2.10.1
-pytest==8.3.4
-pytest-cov==6.0.0
-python-dateutil==2.9.0.post0
-pytz==2025.1
-scapy==2.6.1
-six==1.17.0
-SQLAlchemy==2.0.37
-typing_extensions==4.12.2
-tzdata==2025.1
-virtualenv==20.28.1
-Werkzeug==3.1.3
+Flask-JWT-Extended==4.6.0
+Flask-CORS==4.0.0
+Flask-Bcrypt==1.0.1
+Flask-Redis==0.4.0
+pika==1.3.2
+redis==5.0.1
+python-dotenv==1.0.1
+SQLAlchemy==2.0.27
+Werkzeug==3.0.1
